# alpaca-discord-bot

./: Orders_Bot.py  README.md  TA_Bot.py  pyproject.toml
